syntax = "proto3";

package proto;

option go_package = "./;state";

message Key {
    bytes address = 1;
    int64 weight  = 2;
}

message Permission {
    enum PermissionType {
        Owner = 0;
        User  = 1;
    }
    int32           ID             = 1;
    PermissionType  Type           = 2;
    string          PermissionName = 3;
    int64           Threshold      = 4;
    bytes           Operations     = 5;
    repeated Key    Signers        = 6;
}

message UserAccountData {
    bytes   Address        = 1;
    bytes   Name           = 2;
    bytes   RootHash       = 3;
    int64   Balance        = 5;
    int64   Allowance      = 6;
    uint64  Nonce          = 7;

    repeated Permission Permissions = 8;

    bytes OwnerAddress   = 9;
    bytes CodeHash       = 10;
    bytes CodeMetadata   = 11;
}

message CodeEntry {
    bytes   Code             = 1;
    uint32  NumReferences    = 2;
}
